--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
+    <script async src="index-script.js"></script>
     <title>Pizza Resturant</title>
 </head>
 
@@ -36,11 +37,23 @@
         </div>
 
         <div class="menu-area">
-            <h1 class="carosel-title">Check out our yummy food!</h1>
-            <!-- <div class="carosel-container">
-                <div class= "carosel-image-1">
-                    <img src="images/pizza-1202775_1280.jpg">
+            <h1 class="carosel-title">Testimonials</h1>
+            <div class="slideshow-images">
+                <img class="image-shrink" src="images/pizza-1202775_1280.jpg">
+                <div class="reviewtext">Best i've ever had - Ryan</div>
+            </div>
+            <!-- <div class="slideshow-container-1
+                <div class="slideshow-images">
+                    <img class="image-shrink" src="images/pizza-1202775_1280.jpg">
+                    <div class="reviewtext">Best i've ever had - Ryan</div>
                 </div>
+                <div class="slideshow-images">
+                    <img class="image-shrink" src="images/pizza-1949157_1280.jpg">
+                    <div class="reviewtext">Simply incredible - Bob</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div> -->
             <span class="carosel-subtitle">Mouth watering yet? Check out our menu</span>
             <a href="menu.html" class="menu-btn">View Menu</a>
