--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body class="main-container full-height-grow">
     <header class="main-header">
-        <a href="/" class="pizza-logo">
+        <a href="index.html" class="pizza-logo">
             <img src="images/pizza.png">
             <div class="resturant-name">
                 Pizza Resturant
