Added image slideshow/carosel to main page

--- a/index.html
+++ b/index.html
@@ -37,24 +37,12 @@
         </div>
 
         <div class="menu-area">
-            <h1 class="carosel-title">Testimonials</h1>
-            <div class="slideshow-images">
-                <img class="image-shrink" src="images/pizza-1202775_1280.jpg">
-                <div class="reviewtext">Best i've ever had - Ryan</div>
+            <h1 class="carosel-title">Mouth Watering...</h1>
+            <div id="container-slideshow">
+                <button class="slideButtons" id="previous">&#10094;</button>
+                <img class="image-shrink" src="images/pizza-1344720_1280.jpg" id="slides">
+                <button class="slideButtons" id="next">&#10095;</button>
             </div>
-            <!-- <div class="slideshow-container-1
-                <div class="slideshow-images">
-                    <img class="image-shrink" src="images/pizza-1202775_1280.jpg">
-                    <div class="reviewtext">Best i've ever had - Ryan</div>
-                </div>
-                <div class="slideshow-images">
-                    <img class="image-shrink" src="images/pizza-1949157_1280.jpg">
-                    <div class="reviewtext">Simply incredible - Bob</div>
-                </div>
-
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
-            </div> -->
             <span class="carosel-subtitle">Mouth watering yet? Check out our menu</span>
             <a href="menu.html" class="menu-btn">View Menu</a>
         </div>
